--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16,7 +16,7 @@
 }
 
 .tikal-wallpaper {
-  background: url("/../images/tikalWallpaper.jpg") no-repeat center center fixed;
+  background: url("/../images/texum-logo.jpeg") no-repeat center center fixed;
   background-size: cover;
 }
 
