--- a/public/css/app.css
+++ b/public/css/app.css
@@ -434,6 +434,11 @@
   background-size: cover;
 }
 
+.texum-logo {
+  background: url("/../images/texum-logo.jpeg") no-repeat center center fixed;
+  background-size: cover;
+}
+
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
